
@startuml
hide empty methods
hide empty fields


class "**OpenApiServer**" as OpenApiServer {
        StringType url
        StringType description
}

 

class "**OpenApiInfo**" as OpenApiInfo {
}

OpenApiInfo --|> InfoSection
 

class "**Command**" as Command {
        CommandCommandEnum command
        StringType[] tags
        StringType summary
        StringType description
        StringType operationId
        Parameter[] parameters
        RequestBody requestBody
        Response[] responses
        CommandSecurity security
}
note top: information to a specific HTTP\ncommand

 

class "**PathType**" as PathType {
        StringType pathPattern
        Command[] commands
}
note top: base type that contains all\nREST path information

PathType --|> Type
 

enum "CommandCommandEnum" as CommandCommandEnum {
    GET
    PUT
    POST
    DELETE
    OPTIONS
    PATCH
}

class "**Parameter**" as Parameter {
        ParameterInTypeEnum inType
        StringType name
        BooleanType isArray
        StringType description
        BooleanType required
        Type type
}
note top: definition of a parameter that\nis used in the request

 

class "**RequestBody**" as RequestBody {
        StringType description
        BooleanType required
        ContentEntry[] content
}
note top: definition of a parameter that\nis used in the request

 

class "**Response**" as Response {
        IntegerType returnCode
        StringType description
        ContentEntry[] content
}
note top: description of a response option\nfor a request

 

class "CommandSecurity" as CommandSecurity {
        StringType[] scopes
}

 

class "**ContentEntry**" as ContentEntry {
        StringType mimeType
        Type type
        BooleanType isArray
}

 

enum "ParameterInTypeEnum" as ParameterInTypeEnum {
    PATH
    QUERY
    HEADER
    COOKIE
}


    


    
    





Command "0" *-- "n" Parameter

Command  *--  RequestBody

Command "0" *-- "n" Response

Command  *--  CommandSecurity

    

PathType "0" *-- "n" Command

    
    





Parameter  *--  Type

    


RequestBody "0" *-- "n" ContentEntry

    


Response "0" *-- "n" ContentEntry

    

    

ContentEntry  *--  Type


    

footer \ngenerated with yacg (https://github.com/OkieOth/yacg),\n(template: plantUml.mako v1.1.0)\npowered by plantuml (https://plantuml.com/)
@enduml